# gmcode

./: .gitignore  README.md  flake.nix  setup.cfg
.github/workflows/: main.yml
src/gmcode/: __init__.py  functions.py  geom.py  machine.py
tests/: conftest.py  test_functions.py  test_gcodefile.py  test_geom.py  test_machine.py  test_path.py  test_vector.py  utils.py
