[metadata]
name = gmcode
version = 0.0.1
author = Marcus Boyd
author_email = marcus@geosol.com.au
description = Helper for writing gcode
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marcus7070/gmcode
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
